# barbariska

./: .clang-format  CMakeLists.txt
bar/: CMakeLists.txt
bar/include/: bar-layout.hpp  bar-renderer.hpp  component.hpp  config.hpp  surface.hpp  wlr-layer-shell-unstable-v1-client-protocol.h
bar/src/: bar-layout.cpp  bar-renderer.cpp  config.cpp  main.cpp  surface.cpp
core/: CMakeLists.txt
core/include/: client.hpp  colors.hpp  core.hpp  font.hpp  input-context.hpp  layout.hpp  math.hpp  renderer.hpp  shapes.hpp  shm-buffer.hpp  state.hpp  surface.hpp  wayland-context.hpp
core/src/: client.cpp  input-context.cpp  renderer.cpp  shm-buffer.cpp  surface.cpp  wayland-context.cpp
daemon/: CMakeLists.txt
daemon/include/: bsocket.hpp  hypr.hpp  shared-memory.hpp  shm.hpp  socket.hpp
daemon/src/: bsocket.cpp  hypr.cpp  main.cpp  shm.cpp  socket.cpp
